// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NewQRView Component Renders correctly on first tab 1`] = `
<RNCSafeAreaView
  edges={
    Array [
      "bottom",
      "left",
      "right",
    ]
  }
  style={
    Object {
      "backgroundColor": "#313132",
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "borderTopColor": "#000000",
        "borderTopWidth": 4,
        "flexDirection": "row",
        "flexShrink": 1,
        "width": "100%",
      }
    }
  >
    <View
      accessibilityLabel="Scan.ScanQRCode"
      accessibilityState={
        Object {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        Object {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#FFFFFF",
          "flex": 1,
          "justifyContent": "center",
          "opacity": 1,
          "padding": 10,
        }
      }
      testID="com.ariesbifold:id/Scan.ScanQRCode"
    >
      <Text
        allowFontScaling={false}
        selectable={false}
        style={
          Array [
            Object {
              "color": "#42803E",
              "fontSize": 20,
            },
            undefined,
            Object {
              "fontFamily": "Material Icons",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            Object {},
          ]
        }
      >
        
      </Text>
      <Text
        style={
          Array [
            Object {
              "color": "#FFFFFF",
              "fontSize": 18,
              "fontWeight": "normal",
            },
            Object {
              "color": "#42803E",
            },
          ]
        }
      >
        Scan.ScanQRCode
      </Text>
    </View>
    <View
      accessibilityLabel="Scan.MyQRCode"
      accessibilityState={
        Object {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        Object {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#FFFFFF",
          "flex": 1,
          "justifyContent": "center",
          "opacity": 1,
          "padding": 10,
        }
      }
      testID="com.ariesbifold:id/Scan.MyQRCode"
    >
      <Text
        allowFontScaling={false}
        selectable={false}
        style={
          Array [
            Object {
              "color": "#FFFFFF",
              "fontSize": 20,
            },
            undefined,
            Object {
              "fontFamily": "Material Icons",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            Object {},
          ]
        }
      >
        
      </Text>
      <Text
        style={
          Array [
            Object {
              "color": "#FFFFFF",
              "fontSize": 18,
              "fontWeight": "normal",
            },
            false,
          ]
        }
      >
        Scan.MyQRCode
      </Text>
    </View>
  </View>
</RNCSafeAreaView>
`;

exports[`NewQRView Component Renders correctly on second tab 1`] = `
<RNCSafeAreaView
  edges={
    Array [
      "bottom",
      "left",
      "right",
    ]
  }
  style={
    Object {
      "backgroundColor": "#313132",
      "flex": 1,
    }
  }
>
  <RCTScrollView>
    <View>
      <View
        style={
          Object {
            "alignItems": "center",
          }
        }
      >
        <View
          style={
            Object {
              "flex": 1,
              "marginTop": 10,
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "justifyContent": "center",
              }
            }
            testID="com.ariesbifold:id/LoadingActivityIndicator"
          >
            <Image
              source={
                Object {
                  "default": "",
                }
              }
              style={
                Object {
                  "height": "33%",
                  "width": "33%",
                }
              }
              testID="com.ariesbifold:id/LoadingActivityIndicatorImage"
            />
            <View
              collapsable={false}
              style={
                Object {
                  "position": "absolute",
                  "transform": Array [
                    Object {
                      "rotate": "360deg",
                    },
                  ],
                }
              }
            >
              <
                fill="#FFFFFF"
                height={200}
                width={200}
              />
            </View>
          </View>
        </View>
        <View
          style={
            Object {
              "flex": 1,
              "paddingHorizontal": 20,
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "display": "flex",
                "flexDirection": "row",
                "justifyContent": "center",
              }
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#FFFFFF",
                    "fontSize": 32,
                    "fontWeight": "bold",
                    "marginBottom": 20,
                    "textAlign": "center",
                  },
                  Object {
                    "paddingHorizontal": 20,
                  },
                ]
              }
            >
              My Wallet - 1234
            </Text>
            <RNGestureHandlerButton
              collapsable={false}
              onGestureEvent={[Function]}
              onGestureHandlerEvent={[Function]}
              onGestureHandlerStateChange={[Function]}
              onHandlerStateChange={[Function]}
              rippleColor={0}
              testID="com.ariesbifold:id/EditWalletName"
            >
              <View
                accessibilityLabel="NameWallet.EditWalletName"
                accessible={true}
                collapsable={false}
                style={
                  Object {
                    "opacity": 1,
                  }
                }
              >
                <Text
                  allowFontScaling={false}
                  selectable={false}
                  style={
                    Array [
                      Object {
                        "color": undefined,
                        "fontSize": 24,
                      },
                      Object {
                        "color": "#42803E",
                        "fontSize": 32,
                        "fontWeight": "bold",
                        "marginBottom": 20,
                        "marginLeft": 10,
                      },
                      Object {
                        "fontFamily": "Material Icons",
                        "fontStyle": "normal",
                        "fontWeight": "normal",
                      },
                      Object {},
                    ]
                  }
                >
                  
                </Text>
              </View>
            </RNGestureHandlerButton>
          </View>
          <Text
            style={
              Object {
                "color": "#FFFFFF",
                "fontSize": 18,
                "fontWeight": "normal",
                "textAlign": "center",
              }
            }
          >
            Connection.ShareQR
          </Text>
        </View>
      </View>
    </View>
  </RCTScrollView>
  <View
    style={
      Object {
        "borderTopColor": "#000000",
        "borderTopWidth": 4,
        "flexDirection": "row",
        "flexShrink": 1,
        "width": "100%",
      }
    }
  >
    <View
      accessibilityLabel="Scan.ScanQRCode"
      accessibilityState={
        Object {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        Object {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#FFFFFF",
          "flex": 1,
          "justifyContent": "center",
          "opacity": 1,
          "padding": 10,
        }
      }
      testID="com.ariesbifold:id/Scan.ScanQRCode"
    >
      <Text
        allowFontScaling={false}
        selectable={false}
        style={
          Array [
            Object {
              "color": "#FFFFFF",
              "fontSize": 20,
            },
            undefined,
            Object {
              "fontFamily": "Material Icons",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            Object {},
          ]
        }
      >
        
      </Text>
      <Text
        style={
          Array [
            Object {
              "color": "#FFFFFF",
              "fontSize": 18,
              "fontWeight": "normal",
            },
            false,
          ]
        }
      >
        Scan.ScanQRCode
      </Text>
    </View>
    <View
      accessibilityLabel="Scan.MyQRCode"
      accessibilityState={
        Object {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        Object {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#FFFFFF",
          "flex": 1,
          "justifyContent": "center",
          "opacity": 1,
          "padding": 10,
        }
      }
      testID="com.ariesbifold:id/Scan.MyQRCode"
    >
      <Text
        allowFontScaling={false}
        selectable={false}
        style={
          Array [
            Object {
              "color": "#42803E",
              "fontSize": 20,
            },
            undefined,
            Object {
              "fontFamily": "Material Icons",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            Object {},
          ]
        }
      >
        
      </Text>
      <Text
        style={
          Array [
            Object {
              "color": "#FFFFFF",
              "fontSize": 18,
              "fontWeight": "normal",
            },
            Object {
              "color": "#42803E",
            },
          ]
        }
      >
        Scan.MyQRCode
      </Text>
    </View>
  </View>
</RNCSafeAreaView>
`;
